# cs50-final

./: .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py  forms.py  helpers.py  models.py  views.py
app/templates/: dashboard.html  index.html  layout.html  login.html  register.html
templates/: apology.html  index.html  layout.html  login.html  register.html
