[tool.poetry]
name = "cs50-final"
version = "0.1.0"
description = ""
authors = ["Raivydas Šimėnas <raivydas.simenas@gmail.com>"]
readme = "README.md"
packages = [{include = "cs50_final"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
flask-wtf = "^1.0.1"
wtforms = "^3.0.1"
flask-bcrypt = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
